--- a/main.html
+++ b/main.html
@@ -48,10 +48,9 @@
                  <h3>BENEFITES</h3>
                  <ul>
                     <li>Apple is Nurtrition</li>
-                    <li>Apper iddlf zksjfdal</li>
-                    <li>Appert jslkdjas,c dlfslnd fdlkfjsa f</li>
-                    <li>Arrays us gtjr  dfjdsaf kfjja;fj </li>
-                 </ul>
+                    <li>Apples may be good for weight loss</li>
+                    <li>Apples may be good for bone health</li>
+                <li>They are linked to a lowest risk of diabetes</li>
                  <button class="add_to_cart_btn">ADD TO CART</button>
             </div>
         </div>
